--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,33 @@
 {
-    "name": "nissicreative/laravel-recaptcha",
-    "description": "A simple reCAPTCHA implementation for your Laravel project.",
-    "keywords": [
-        "laravel",
-        "recaptcha"
-    ],
-    "type": "library",
-    "require": {
-        "php": "^5.6 || ^7.0 || ^8.0",
-        "guzzlehttp/guzzle": "^6.2 || ^7.0",
-        "illuminate/support": "^5.0 || ^6.0 || ^7.0 || ^8.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Nissi\\ReCaptcha\\": "src/"
-        }
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Michael Folsom",
-            "email": "mike@nissicreative.com"
-        }
-    ],
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Nissi\\ReCaptcha\\ReCaptchaServiceProvider"
-            ]
-        }
+  "name": "nissicreative/laravel-recaptcha",
+  "description": "A simple reCAPTCHA implementation for your Laravel project.",
+  "keywords": [
+    "laravel",
+    "recaptcha"
+  ],
+  "type": "library",
+  "require": {
+    "php": "^5.6 || ^7.0 || ^8.0",
+    "guzzlehttp/guzzle": "^6.2 || ^7.0",
+    "illuminate/support": "^5.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Nissi\\ReCaptcha\\": "src/"
     }
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Michael Folsom",
+      "email": "mike@nissicreative.com"
+    }
+  ],
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Nissi\\ReCaptcha\\ReCaptchaServiceProvider"
+      ]
+    }
+  }
 }
